2003-08-02 Jim Garlick <garlick@llnl.gov>

    * src/device.c: print useful error message in process_setplugname if
    node does not exist.

    * src/client.c: pm --device output now lists nodes only if they
    have been mapped to plug names.

    * src/client.c: sort the list of nodes returned by pm --list.

    * src/device.c: emit warning if node does not have plug name assigned
    after login script completes (successfully or with timeout).

    * src/device.h: increase max buffer size from 8K to 64K as we were seeing
    the occasional ENOSPC error.

2003-08-01 Jim Garlick <garlick@llnl.gov>

    * src/device.h: decrease max buffer size from 1M to 8K.

    * src/client.c: sort the list of nodes returned by pm --device

2003-07-29 Jim Garlick <garlick@llnl.gov>

    * etc/phantom-llnl.dev,etc/phantom.dev: reduced timeout 20s->5s.

    * Makefile: distribute phantom-llnl.dev.

2003-07-23 Jim Garlick <garlick@llnl.gov>

    * etc/ibmrsa.dev: Tweaked for new firmware release.

    * etc/ibmrsa-smc.dev: New.  Config for RSA connected to main board via
    system management connector.

    * etc/baytech-rpc3-nc.dev: Make it look more like the rpc28 config.

2003-07-21 Jim Garlick <garlick@llnl.gov>

    * : minor code cleanup

2003-07-16 Jim Garlick <garlick@llnl.gov>

    * etc/ipmi.dev: New.

2003-07-15 Jim Garlick <garlick@llnl.gov>

    * etc/baytech-rpc28-nc.dev, etc/baytech-rpc3-nc.dev: minor fine tuning
    based on IGS cluster experience with rpc28's.

    * src/device_pipe.[ch], src/pty.[ch]: New.

    * src/parse.y: Support for "pipe device".

    * etc/phantom-llnl.dev: New - phantom firmware with llnl mods.

2003-07-09 Jim Garlick <garlick@llnl.gov>

    * etc/baytech-rpc28-nc.dev, etc/baytech-rpc3-nc.dev, etc/baytech.dev:
    Make prompt recognition less restrictive.

2003-07-01 Jim Garlick <garlick@llnl.gov>

    * etc/phantom.dev: Reflect changes in 3.0.4b firmware.

2003-06-23 Jim Garlick <garlick@llnl.gov>
